[gd_scene load_steps=22 format=4 uid="uid://bmng5n8ut76my"]

[ext_resource type="PackedScene" uid="uid://ddaktqdecaeyp" path="res://scenes/background.tscn" id="1_4v7e2"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_hjjts"]
[ext_resource type="PackedScene" uid="uid://dm281unnjfryf" path="res://scenes/player.tscn" id="2_yegt6"]
[ext_resource type="Texture2D" uid="uid://cxae3de56tibu" path="res://assets/Ground_TileSet.png" id="3_uce7y"]
[ext_resource type="PackedScene" uid="uid://rpveubw1dsjp" path="res://scenes/dog.tscn" id="4_jacc6"]
[ext_resource type="PackedScene" uid="uid://dgxeauqyjjo7n" path="res://scenes/actionable.tscn" id="5_jp7k2"]
[ext_resource type="Resource" uid="uid://b365xf1mv0sly" path="res://dialogue/main.dialogue" id="6_epija"]
[ext_resource type="Resource" uid="uid://gxv3nnrxyf3v" path="res://dialogue/start_without_permission_to_pet.dialogue" id="8_bvo6i"]
[ext_resource type="PackedScene" uid="uid://cmmm8yhy7vdtr" path="res://scenes/coin_label.tscn" id="8_o0dbo"]
[ext_resource type="Resource" uid="uid://5mj522nu312k" path="res://dialogue/start_with_permission_to_pet.dialogue" id="9_6xhco"]
[ext_resource type="Resource" uid="uid://y8ufhs0d6ixt" path="res://dialogue/step2.dialogue" id="10_ayp6q"]
[ext_resource type="Resource" uid="uid://mx1wn17wkm37" path="res://dialogue/step2_introduce_yourself_by_touching.dialogue" id="11_drh10"]
[ext_resource type="Resource" uid="uid://d02d1587lf5b1" path="res://dialogue/step2_introduce_yourself_by_smell.dialogue" id="12_4o3hr"]
[ext_resource type="Resource" uid="uid://dkd32erxmk0ug" path="res://dialogue/step3.dialogue" id="13_04hwu"]
[ext_resource type="Resource" uid="uid://dgjr82r2gwe5b" path="res://dialogue/step3_pet_over_head.dialogue" id="14_mi7if"]
[ext_resource type="Resource" uid="uid://dpneaw5ipfp3x" path="res://dialogue/step3_pet_under_chin.dialogue" id="15_pvmci"]
[ext_resource type="AudioStream" uid="uid://dia8bptbanik1" path="res://assets/sounds/raylie_thanks.mp3" id="17_xbt8h"]
[ext_resource type="AudioStream" uid="uid://c7e62t0v2wsrl" path="res://assets/sounds/james_reply.mp3" id="18_h5jwp"]
[ext_resource type="PackedScene" uid="uid://cco4bvsmuo1nu" path="res://scenes/JamesCharacter.tscn" id="19_71q73"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dp871"]
texture = ExtResource("3_uce7y")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0

[sub_resource type="TileSet" id="TileSet_o54qi"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dp871")

[node name="game" type="Node2D"]
script = ExtResource("1_hjjts")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-85, 547)
tile_map_data = PackedByteArray("AADJ//z/AAAAAAAAAADJ//3/AAAAAAEAAADJ//7/AAAAAAIAAADJ////AAAAAAMAAADK//z/AAABAAAAAADK//3/AAABAAEAAADK//7/AAABAAIAAADK////AAABAAMAAADL//z/AAACAAAAAADL//3/AAACAAEAAADL//7/AAACAAIAAADL////AAACAAMAAADM//z/AAADAAAAAADM//3/AAADAAEAAADM//7/AAADAAIAAADM////AAADAAMAAADN//z/AAAEAAAAAADN//3/AAAEAAEAAADN//7/AAAEAAIAAADN////AAAEAAMAAADO//z/AAAFAAAAAADO//3/AAAFAAEAAADO//7/AAAFAAIAAADO////AAAFAAMAAADP//z/AAABAAAAAADP//3/AAABAAEAAADP//7/AAABAAIAAADP////AAABAAMAAADQ//z/AAACAAAAAADQ//3/AAACAAEAAADQ//7/AAACAAIAAADQ////AAACAAMAAADR//z/AAADAAAAAADR//3/AAADAAEAAADR//7/AAADAAIAAADR////AAADAAMAAADS//z/AAAEAAAAAADS//3/AAAEAAEAAADS//7/AAAEAAIAAADS////AAAEAAMAAADT//z/AAAFAAAAAADT//3/AAAFAAEAAADT//7/AAAFAAIAAADT////AAAFAAMAAADU//z/AAAAAAAAAADU//3/AAAAAAEAAADU//7/AAAAAAIAAADU////AAAAAAMAAADV//z/AAABAAAAAADV//3/AAABAAEAAADV//7/AAABAAIAAADV////AAABAAMAAADW//z/AAACAAAAAADW//3/AAACAAEAAADW//7/AAACAAIAAADW////AAACAAMAAADX//z/AAADAAAAAADX//3/AAADAAEAAADX//7/AAADAAIAAADX////AAADAAMAAADY//z/AAAEAAAAAADY//3/AAAEAAEAAADY//7/AAAEAAIAAADY////AAAEAAMAAADZ//z/AAAFAAAAAADZ//3/AAAFAAEAAADZ//7/AAAFAAIAAADZ////AAAFAAMAAADa//z/AAAAAAAAAADa//3/AAAAAAEAAADa//7/AAAAAAIAAADa////AAAAAAMAAADb//z/AAABAAAAAADb//3/AAABAAEAAADb//7/AAABAAIAAADb////AAABAAMAAADc//z/AAACAAAAAADc//3/AAACAAEAAADc//7/AAACAAIAAADc////AAACAAMAAADd//z/AAADAAAAAADd//3/AAADAAEAAADd//7/AAADAAIAAADd////AAADAAMAAADe//z/AAAEAAAAAADe//3/AAAEAAEAAADe//7/AAAEAAIAAADe////AAAEAAMAAADf//z/AAAFAAAAAADf//3/AAAFAAEAAADf//7/AAAFAAIAAADf////AAAFAAMAAADg//z/AAABAAAAAADg//3/AAABAAEAAADg//7/AAABAAIAAADg////AAABAAMAAADh//z/AAACAAAAAADh//3/AAACAAEAAADh//7/AAACAAIAAADh////AAACAAMAAADi//z/AAADAAAAAADi//3/AAADAAEAAADi//7/AAADAAIAAADi////AAADAAMAAADj//z/AAAEAAAAAADj//3/AAAEAAEAAADj//7/AAAEAAIAAADj////AAAEAAMAAADk//z/AAAFAAAAAADk//3/AAAFAAEAAADk//7/AAAFAAIAAADk////AAAFAAMAAADl//z/AAAAAAAAAADl//3/AAAAAAEAAADl//7/AAAAAAIAAADl////AAAAAAMAAADm//z/AAABAAAAAADm//3/AAABAAEAAADm//7/AAABAAIAAADm////AAABAAMAAADn//z/AAACAAAAAADn//3/AAACAAEAAADn//7/AAACAAIAAADn////AAACAAMAAADo//z/AAADAAAAAADo//3/AAADAAEAAADo//7/AAADAAIAAADo////AAADAAMAAADp//z/AAAEAAAAAADp//3/AAAEAAEAAADp//7/AAAEAAIAAADp////AAAEAAMAAADq//z/AAAFAAAAAADq//3/AAAFAAEAAADq//7/AAAFAAIAAADq////AAAFAAMAAADr//z/AAAAAAAAAADr//3/AAAAAAEAAADr//7/AAAAAAIAAADr////AAAAAAMAAADs//z/AAABAAAAAADs//3/AAABAAEAAADs//7/AAABAAIAAADs////AAABAAMAAADt//z/AAACAAAAAADt//3/AAACAAEAAADt//7/AAACAAIAAADt////AAACAAMAAADu//z/AAADAAAAAADu//3/AAADAAEAAADu//7/AAADAAIAAADu////AAADAAMAAADv//z/AAAEAAAAAADv//3/AAAEAAEAAADv//7/AAAEAAIAAADv////AAAEAAMAAADw//z/AAAFAAAAAADw//3/AAAFAAEAAADw//7/AAAFAAIAAADw////AAAFAAMAAADx//z/AAABAAAAAADx//3/AAABAAEAAADx//7/AAABAAIAAADx////AAABAAMAAADy//z/AAACAAAAAADy//3/AAACAAEAAADy//7/AAACAAIAAADy////AAACAAMAAADz//z/AAADAAAAAADz//3/AAADAAEAAADz//7/AAADAAIAAADz////AAADAAMAAAD0//z/AAAEAAAAAAD0//3/AAAEAAEAAAD0//7/AAAEAAIAAAD0////AAAEAAMAAAD1//z/AAAFAAAAAAD1//3/AAAFAAEAAAD1//7/AAAFAAIAAAD1////AAAFAAMAAAD2//z/AAAAAAAAAAD2//3/AAAAAAEAAAD2//7/AAAAAAIAAAD2////AAAAAAMAAAD3//z/AAABAAAAAAD3//3/AAABAAEAAAD3//7/AAABAAIAAAD3////AAABAAMAAAD4//z/AAACAAAAAAD4//3/AAACAAEAAAD4//7/AAACAAIAAAD4////AAACAAMAAAD5//z/AAADAAAAAAD5//3/AAADAAEAAAD5//7/AAADAAIAAAD5////AAADAAMAAAD6//z/AAAEAAAAAAD6//3/AAAEAAEAAAD6//7/AAAEAAIAAAD6////AAAEAAMAAAD7//z/AAAFAAAAAAD7//3/AAAFAAEAAAD7//7/AAAFAAIAAAD7////AAAFAAMAAAD8//z/AAAAAAAAAAD8//3/AAAAAAEAAAD8//7/AAAAAAIAAAD8////AAAAAAMAAAD9//z/AAABAAAAAAD9//3/AAABAAEAAAD9//7/AAABAAIAAAD9////AAABAAMAAAD+//z/AAACAAAAAAD+//3/AAACAAEAAAD+//7/AAACAAIAAAD+////AAACAAMAAAD///z/AAADAAAAAAD///3/AAADAAEAAAD///7/AAADAAIAAAD/////AAADAAMAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAEAAAAAAP7/AAAEAAIAAAAAAP//AAAEAAMAAAABAPz/AAAFAAAAAAABAP3/AAAFAAEAAAABAP7/AAAFAAIAAAABAP//AAAFAAMAAAACAPz/AAAAAAAAAAACAP3/AAAAAAEAAAACAP7/AAAAAAIAAAACAP//AAAAAAMAAAADAPz/AAABAAAAAAADAP3/AAABAAEAAAADAP7/AAABAAIAAAADAP//AAABAAMAAAAEAPz/AAACAAAAAAAEAP3/AAACAAEAAAAEAP7/AAACAAIAAAAEAP//AAACAAMAAAAFAPz/AAADAAAAAAAFAP3/AAADAAEAAAAFAP7/AAADAAIAAAAFAP//AAADAAMAAAAGAPz/AAAEAAAAAAAGAP3/AAAEAAEAAAAGAP7/AAAEAAIAAAAGAP//AAAEAAMAAAAHAPz/AAAFAAAAAAAHAP3/AAAFAAEAAAAHAP7/AAAFAAIAAAAHAP//AAAFAAMAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAEAAAAIAP7/AAAAAAIAAAAIAP//AAAAAAMAAAAJAPz/AAABAAAAAAAJAP3/AAABAAEAAAAJAP7/AAABAAIAAAAJAP//AAABAAMAAAAKAPz/AAACAAAAAAAKAP3/AAACAAEAAAAKAP7/AAACAAIAAAAKAP//AAACAAMAAAALAPz/AAADAAAAAAALAP3/AAADAAEAAAALAP7/AAADAAIAAAALAP//AAADAAMAAAAMAPz/AAAEAAAAAAAMAP3/AAAEAAEAAAAMAP7/AAAEAAIAAAAMAP//AAAEAAMAAAANAPz/AAAFAAAAAAANAP3/AAAFAAEAAAANAP7/AAAFAAIAAAANAP//AAAFAAMAAAAOAPz/AAAAAAAAAAAOAP3/AAAAAAEAAAAOAP7/AAAAAAIAAAAOAP//AAAAAAMAAAAPAPz/AAABAAAAAAAPAP3/AAABAAEAAAAPAP7/AAABAAIAAAAPAP//AAABAAMAAAAQAPz/AAACAAAAAAAQAP3/AAACAAEAAAAQAP7/AAACAAIAAAAQAP//AAACAAMAAAARAPz/AAADAAAAAAARAP3/AAADAAEAAAARAP7/AAADAAIAAAARAP//AAADAAMAAAASAPz/AAAEAAAAAAASAP3/AAAEAAEAAAASAP7/AAAEAAIAAAASAP//AAAEAAMAAAATAPz/AAAFAAAAAAATAP3/AAAFAAEAAAATAP7/AAAFAAIAAAATAP//AAAFAAMAAAAUAPz/AAAAAAAAAAAUAP3/AAAAAAEAAAAUAP7/AAAAAAIAAAAUAP//AAAAAAMAAAAVAPz/AAABAAAAAAAVAP3/AAABAAEAAAAVAP7/AAABAAIAAAAVAP//AAABAAMAAAAWAPz/AAACAAAAAAAWAP3/AAACAAEAAAAWAP7/AAACAAIAAAAWAP//AAACAAMAAAAXAPz/AAADAAAAAAAXAP3/AAADAAEAAAAXAP7/AAADAAIAAAAXAP//AAADAAMAAAAYAPz/AAAEAAAAAAAYAP3/AAAEAAEAAAAYAP7/AAAEAAIAAAAYAP//AAAEAAMAAAAZAPz/AAAFAAAAAAAZAP3/AAAFAAEAAAAZAP7/AAAFAAIAAAAZAP//AAAFAAMAAAAaAPz/AAAAAAAAAAAaAP3/AAAAAAEAAAAaAP7/AAAAAAIAAAAaAP//AAAAAAMAAAAbAPz/AAABAAAAAAAbAP3/AAABAAEAAAAbAP7/AAABAAIAAAAbAP//AAABAAMAAAAcAPz/AAACAAAAAAAcAP3/AAACAAEAAAAcAP7/AAACAAIAAAAcAP//AAACAAMAAAAdAPz/AAADAAAAAAAdAP3/AAADAAEAAAAdAP7/AAADAAIAAAAdAP//AAADAAMAAAAeAPz/AAAEAAAAAAAeAP3/AAAEAAEAAAAeAP7/AAAEAAIAAAAeAP//AAAEAAMAAAAfAPz/AAAFAAAAAAAfAP3/AAAFAAEAAAAfAP7/AAAFAAIAAAAfAP//AAAFAAMAAAAgAPz/AAAAAAAAAAAgAP3/AAAAAAEAAAAgAP7/AAAAAAIAAAAgAP//AAAAAAMAAAAhAPz/AAABAAAAAAAhAP3/AAABAAEAAAAhAP7/AAABAAIAAAAhAP//AAABAAMAAAAiAPz/AAACAAAAAAAiAP3/AAACAAEAAAAiAP7/AAACAAIAAAAiAP//AAACAAMAAAAjAPz/AAADAAAAAAAjAP3/AAADAAEAAAAjAP7/AAADAAIAAAAjAP//AAADAAMAAAAkAPz/AAAEAAAAAAAkAP3/AAAEAAEAAAAkAP7/AAAEAAIAAAAkAP//AAAEAAMAAAAlAPz/AAAFAAAAAAAlAP3/AAAFAAEAAAAlAP7/AAAFAAIAAAAlAP//AAAFAAMAAAAmAPz/AAAAAAAAAAAmAP3/AAAAAAEAAAAmAP7/AAAAAAIAAAAmAP//AAAAAAMAAAAnAPz/AAABAAAAAAAnAP3/AAABAAEAAAAnAP7/AAABAAIAAAAnAP//AAABAAMAAAAoAPz/AAACAAAAAAAoAP3/AAACAAEAAAAoAP7/AAACAAIAAAAoAP//AAACAAMAAAApAPz/AAADAAAAAAApAP3/AAADAAEAAAApAP7/AAADAAIAAAApAP//AAADAAMAAAAqAPz/AAAEAAAAAAAqAP3/AAAEAAEAAAAqAP7/AAAEAAIAAAAqAP//AAAEAAMAAAArAPz/AAAFAAAAAAArAP3/AAAFAAEAAAArAP7/AAAFAAIAAAArAP//AAAFAAMAAAAsAPz/AAAAAAAAAAAsAP3/AAAAAAEAAAAsAP7/AAAAAAIAAAAsAP//AAAAAAMAAAAtAPz/AAABAAAAAAAtAP3/AAABAAEAAAAtAP7/AAABAAIAAAAtAP//AAABAAMAAAAuAPz/AAACAAAAAAAuAP3/AAACAAEAAAAuAP7/AAACAAIAAAAuAP//AAACAAMAAAAvAPz/AAADAAAAAAAvAP3/AAADAAEAAAAvAP7/AAADAAIAAAAvAP//AAADAAMAAAAwAPz/AAAEAAAAAAAwAP3/AAAEAAEAAAAwAP7/AAAEAAIAAAAwAP//AAAEAAMAAAAxAPz/AAAFAAAAAAAxAP3/AAAFAAEAAAAxAP7/AAAFAAIAAAAxAP//AAAFAAMAAAAyAPz/AAAAAAAAAAAyAP3/AAAAAAEAAAAyAP7/AAAAAAIAAAAyAP//AAAAAAMAAAAzAPz/AAABAAAAAAAzAP3/AAABAAEAAAAzAP7/AAABAAIAAAAzAP//AAABAAMAAAA0APz/AAACAAAAAAA0AP3/AAACAAEAAAA0AP7/AAACAAIAAAA0AP//AAACAAMAAAA1APz/AAADAAAAAAA1AP3/AAADAAEAAAA1AP7/AAADAAIAAAA1AP//AAADAAMAAAA2APz/AAAEAAAAAAA2AP3/AAAEAAEAAAA2AP7/AAAEAAIAAAA2AP//AAAEAAMAAAA3APz/AAAFAAAAAAA3AP3/AAAFAAEAAAA3AP7/AAAFAAIAAAA3AP//AAAFAAMAAAA4APz/AAAAAAAAAAA4AP3/AAAAAAEAAAA4AP7/AAAAAAIAAAA4AP//AAAAAAMAAAA5APz/AAABAAAAAAA5AP3/AAABAAEAAAA5AP7/AAABAAIAAAA5AP//AAABAAMAAAA6APz/AAACAAAAAAA6AP3/AAACAAEAAAA6AP7/AAACAAIAAAA6AP//AAACAAMAAAA7APz/AAADAAAAAAA7AP3/AAADAAEAAAA7AP7/AAADAAIAAAA7AP//AAADAAMAAAA8APz/AAAEAAAAAAA8AP3/AAAEAAEAAAA8AP7/AAAEAAIAAAA8AP//AAAEAAMAAAA9APz/AAAFAAAAAAA9AP3/AAAFAAEAAAA9AP7/AAAFAAIAAAA9AP//AAAFAAMAAAA+APz/AAAAAAAAAAA+AP3/AAAAAAEAAAA+AP7/AAAAAAIAAAA+AP//AAAAAAMAAAA/APz/AAABAAAAAAA/AP3/AAABAAEAAAA/AP7/AAABAAIAAAA/AP//AAABAAMAAABAAPz/AAACAAAAAABAAP3/AAACAAEAAABAAP7/AAACAAIAAABAAP//AAACAAMAAABBAPz/AAADAAAAAABBAP3/AAADAAEAAABBAP7/AAADAAIAAABBAP//AAADAAMAAABCAPz/AAAEAAAAAABCAP3/AAAEAAEAAABCAP7/AAAEAAIAAABCAP//AAAEAAMAAABDAPz/AAAFAAAAAABDAP3/AAAFAAEAAABDAP7/AAAFAAIAAABDAP//AAAFAAMAAABEAPz/AAAAAAAAAABEAP3/AAAAAAEAAABEAP7/AAAAAAIAAABEAP//AAAAAAMAAABFAPz/AAABAAAAAABFAP3/AAABAAEAAABFAP7/AAABAAIAAABFAP//AAABAAMAAABGAPz/AAACAAAAAABGAP3/AAACAAEAAABGAP7/AAACAAIAAABGAP//AAACAAMAAABHAPz/AAADAAAAAABHAP3/AAADAAEAAABHAP7/AAADAAIAAABHAP//AAADAAMAAABIAPz/AAAEAAAAAABIAP3/AAAEAAEAAABIAP7/AAAEAAIAAABIAP//AAAEAAMAAABJAPz/AAAFAAAAAABJAP3/AAAFAAEAAABJAP7/AAAFAAIAAABJAP//AAAFAAMAAABKAPz/AAAAAAAAAABKAP3/AAAAAAEAAABKAP7/AAAAAAIAAABKAP//AAAAAAMAAABLAPz/AAABAAAAAABLAP3/AAABAAEAAABLAP7/AAABAAIAAABLAP//AAABAAMAAABMAPz/AAACAAAAAABMAP3/AAACAAEAAABMAP7/AAACAAIAAABMAP//AAACAAMAAABNAPz/AAADAAAAAABNAP3/AAADAAEAAABNAP7/AAADAAIAAABNAP//AAADAAMAAABOAPz/AAAEAAAAAABOAP3/AAAEAAEAAABOAP7/AAAEAAIAAABOAP//AAAEAAMAAABPAPz/AAAFAAAAAABPAP3/AAAFAAEAAABPAP7/AAAFAAIAAABPAP//AAAFAAMAAABQAPz/AAAAAAAAAABQAP3/AAAAAAEAAABQAP7/AAAAAAIAAABQAP//AAAAAAMAAABRAPz/AAABAAAAAABRAP3/AAABAAEAAABRAP7/AAABAAIAAABRAP//AAABAAMAAABSAPz/AAACAAAAAABSAP3/AAACAAEAAABSAP//AAACAAMAAABTAPz/AAADAAAAAABTAP3/AAADAAEAAABTAP//AAADAAMAAABUAPz/AAAEAAAAAABUAP3/AAAEAAEAAABUAP//AAAEAAMAAABVAPz/AAAFAAAAAABVAP3/AAAFAAEAAABVAP//AAAFAAMAAABWAPz/AAAAAAAAAABWAP3/AAAAAAEAAABWAP//AAAAAAMAAABXAPz/AAABAAAAAABXAP3/AAABAAEAAABXAP//AAABAAMAAABYAPz/AAACAAAAAABYAP3/AAACAAEAAABYAP//AAACAAMAAABZAPz/AAADAAAAAABZAP3/AAADAAEAAABZAP//AAADAAMAAABaAPz/AAAEAAAAAABaAP3/AAAEAAEAAABaAP//AAAEAAMAAABbAPz/AAAFAAAAAABbAP3/AAAFAAEAAABbAP//AAAFAAMAAABcAPz/AAAAAAAAAABcAP3/AAAAAAEAAABcAP//AAAAAAMAAABdAPz/AAABAAAAAABdAP3/AAABAAEAAABdAP//AAABAAMAAABeAPz/AAACAAAAAABeAP3/AAACAAEAAABeAP//AAACAAMAAABfAPz/AAADAAAAAABfAP3/AAADAAEAAABfAP//AAADAAMAAABgAPz/AAAEAAAAAABgAP3/AAAEAAEAAABgAP//AAAEAAMAAABhAPz/AAAFAAAAAABhAP3/AAAFAAEAAABhAP//AAAFAAMAAABiAPz/AAAAAAAAAABiAP3/AAAAAAEAAABiAP//AAAAAAMAAABjAPz/AAABAAAAAABjAP3/AAABAAEAAABjAP//AAABAAMAAABkAPz/AAACAAAAAABkAP3/AAACAAEAAABkAP//AAACAAMAAABlAPz/AAADAAAAAABlAP3/AAADAAEAAABlAP//AAADAAMAAABmAPz/AAAEAAAAAABmAP3/AAAEAAEAAABmAP//AAAEAAMAAABnAPz/AAAFAAAAAABnAP3/AAAFAAEAAABnAP//AAAFAAMAAABoAPz/AAAAAAAAAABoAP3/AAAAAAEAAABoAP//AAAAAAMAAABpAPz/AAABAAAAAABpAP3/AAABAAEAAABpAP//AAABAAMAAABqAPz/AAACAAAAAABqAP3/AAACAAEAAABqAP//AAACAAMAAABrAPz/AAADAAAAAABrAP3/AAADAAEAAABrAP//AAADAAMAAABsAPz/AAAEAAAAAABsAP3/AAAEAAEAAABsAP//AAAEAAMAAABtAPz/AAAFAAAAAABtAP3/AAAFAAEAAABtAP//AAAFAAMAAABuAPz/AAAAAAAAAABuAP3/AAAAAAEAAABuAP//AAAAAAMAAABvAPz/AAABAAAAAABvAP3/AAABAAEAAABvAP//AAABAAMAAABwAPz/AAACAAAAAABwAP3/AAACAAEAAABwAP//AAACAAMAAABxAPz/AAADAAAAAABxAP3/AAADAAEAAABxAP//AAADAAMAAAByAPz/AAAEAAAAAAByAP3/AAAEAAEAAAByAP//AAAEAAMAAABzAPz/AAAFAAAAAABzAP3/AAAFAAEAAABzAP//AAAFAAMAAAB0APz/AAAAAAAAAAB0AP3/AAAAAAEAAAB0AP//AAAAAAMAAAB1APz/AAABAAAAAAB1AP3/AAABAAIAAAB1AP//AAABAAMAAAB2APz/AAACAAAAAAB2AP3/AAACAAIAAAB2AP//AAACAAMAAAB3APz/AAADAAAAAAB3AP3/AAADAAIAAAB3AP//AAADAAMAAAB4APz/AAAEAAAAAAB4AP3/AAAEAAIAAAB4AP//AAAEAAMAAAB5APz/AAAFAAAAAAB5AP3/AAAFAAIAAAB5AP//AAAFAAMAAAB6APz/AAAAAAAAAAB6AP3/AAAAAAEAAAB6AP//AAAAAAMAAAB7APz/AAABAAAAAAB7AP3/AAABAAEAAAB7AP//AAABAAMAAAB8APz/AAACAAAAAAB8AP3/AAACAAEAAAB8AP//AAACAAMAAAB9APz/AAADAAAAAAB9AP3/AAADAAEAAAB9AP//AAADAAMAAAB+APz/AAAEAAAAAAB+AP3/AAAEAAEAAAB+AP//AAAEAAMAAAB/APz/AAAFAAAAAAB/AP3/AAAFAAEAAAB/AP7/AAAFAAIAAAB/AP//AAAFAAMAAACAAPz/AAAAAAAAAACAAP3/AAAAAAEAAACAAP7/AAAAAAIAAACAAP//AAAAAAMAAACBAPz/AAABAAAAAACBAP3/AAABAAEAAACBAP7/AAABAAIAAACBAP//AAABAAMAAACCAPz/AAACAAAAAACCAP3/AAACAAEAAACCAP7/AAACAAIAAACCAP//AAACAAMAAACDAPz/AAADAAAAAACDAP3/AAADAAEAAACDAP7/AAADAAIAAACDAP//AAADAAMAAACEAPz/AAAEAAAAAACEAP3/AAAEAAEAAACEAP7/AAAEAAIAAACEAP//AAAEAAMAAACFAPz/AAAFAAAAAACFAP3/AAAFAAEAAACFAP7/AAAFAAIAAACFAP//AAAFAAMAAACGAPz/AAAAAAAAAACGAP3/AAAAAAEAAACGAP7/AAAAAAIAAACGAP//AAAAAAMAAACHAPz/AAABAAAAAACHAP3/AAABAAEAAACHAP7/AAABAAIAAACHAP//AAABAAMAAACIAPz/AAACAAAAAACIAP3/AAACAAEAAACIAP7/AAACAAIAAACIAP//AAACAAMAAACJAPz/AAADAAAAAACJAP3/AAADAAEAAACJAP7/AAADAAIAAACJAP//AAADAAMAAACKAPz/AAAEAAAAAACKAP3/AAAEAAEAAACKAP7/AAAEAAIAAACKAP//AAAEAAMAAACLAPz/AAAFAAAAAACLAP3/AAAFAAEAAACLAP7/AAAFAAIAAACLAP//AAAFAAMAAACMAPz/AAAAAAAAAACMAP3/AAAAAAEAAACMAP7/AAAAAAIAAACMAP//AAAAAAMAAACNAPz/AAABAAAAAACNAP3/AAABAAEAAACNAP7/AAABAAIAAACNAP//AAABAAMAAACOAPz/AAACAAAAAACOAP3/AAACAAEAAACOAP7/AAACAAIAAACOAP//AAACAAMAAACPAPz/AAADAAAAAACPAP3/AAADAAEAAACPAP7/AAADAAIAAACPAP//AAADAAMAAACQAPz/AAAEAAAAAACQAP3/AAAEAAEAAACQAP7/AAAEAAIAAACQAP//AAAEAAMAAACRAPz/AAAFAAAAAACRAP3/AAAFAAEAAACRAP7/AAAFAAIAAACRAP//AAAFAAMAAACSAPz/AAAAAAAAAACSAP3/AAAAAAEAAACSAP7/AAAAAAIAAACSAP//AAAAAAMAAACTAPz/AAABAAAAAACTAP3/AAABAAEAAACTAP7/AAABAAIAAACTAP//AAABAAMAAACUAPz/AAACAAAAAACUAP3/AAACAAEAAACUAP7/AAACAAIAAACUAP//AAACAAMAAACVAPz/AAADAAAAAACVAP3/AAADAAEAAACVAP7/AAADAAIAAACVAP//AAADAAMAAACWAPz/AAAEAAAAAACWAP3/AAAEAAEAAACWAP7/AAAEAAIAAACWAP//AAAEAAMAAACXAPz/AAAFAAAAAACXAP3/AAAFAAEAAACXAP7/AAAFAAIAAACXAP//AAAFAAMAAACYAPz/AAAAAAAAAACYAP3/AAAAAAEAAACYAP7/AAAAAAIAAACYAP//AAAAAAMAAACZAPz/AAABAAAAAACZAP3/AAABAAEAAACZAP7/AAABAAIAAACZAP//AAABAAMAAACaAPz/AAACAAAAAACaAP3/AAACAAEAAACaAP7/AAACAAIAAACaAP//AAACAAMAAACbAPz/AAADAAAAAACbAP3/AAADAAEAAACbAP7/AAADAAIAAACbAP//AAADAAMAAACcAPz/AAAEAAAAAACcAP3/AAAEAAEAAACcAP7/AAAEAAIAAACcAP//AAAEAAMAAACdAPz/AAAFAAAAAACdAP3/AAAFAAEAAACdAP7/AAAFAAIAAACdAP//AAAFAAMAAACeAPz/AAAAAAAAAACeAP3/AAAAAAEAAACeAP7/AAAAAAIAAACeAP//AAAAAAMAAACfAPz/AAABAAAAAACfAP3/AAABAAEAAACfAP7/AAABAAIAAACfAP//AAABAAMAAACgAPz/AAACAAAAAACgAP3/AAACAAEAAACgAP7/AAACAAIAAACgAP//AAACAAMAAAChAPz/AAADAAAAAAChAP3/AAADAAEAAAChAP7/AAADAAIAAAChAP//AAADAAMAAACiAPz/AAAEAAAAAACiAP3/AAAEAAEAAACiAP7/AAAEAAIAAACiAP//AAAEAAMAAACjAPz/AAAFAAAAAACjAP3/AAAFAAEAAACjAP7/AAAFAAIAAACjAP//AAAFAAMAAACkAPz/AAAAAAAAAACkAP3/AAAAAAEAAACkAP7/AAAAAAIAAACkAP//AAAAAAMAAAClAPz/AAABAAAAAAClAP3/AAABAAEAAAClAP7/AAABAAIAAAClAP//AAABAAMAAACmAPz/AAACAAAAAACmAP3/AAACAAEAAACmAP7/AAACAAIAAACmAP//AAACAAMAAACnAPz/AAADAAAAAACnAP3/AAADAAEAAACnAP7/AAADAAIAAACnAP//AAADAAMAAACoAPz/AAAEAAAAAACoAP3/AAAEAAEAAACoAP7/AAAEAAIAAACoAP//AAAEAAMAAACpAPz/AAAFAAAAAACpAP3/AAAFAAEAAACpAP7/AAAFAAIAAACpAP//AAAFAAMAAACqAPz/AAAAAAAAAACqAP3/AAAAAAEAAACqAP7/AAAAAAIAAACqAP//AAAAAAMAAACrAPz/AAABAAAAAACrAP3/AAABAAEAAACrAP7/AAABAAIAAACrAP//AAABAAMAAACsAPz/AAACAAAAAACsAP3/AAACAAEAAACsAP7/AAACAAIAAACsAP//AAACAAMAAACtAPz/AAADAAAAAACtAP3/AAADAAEAAACtAP7/AAADAAIAAACtAP//AAADAAMAAACuAPz/AAAEAAAAAACuAP3/AAAEAAEAAACuAP7/AAAEAAIAAACuAP//AAAEAAMAAACvAPz/AAAFAAAAAACvAP3/AAAFAAEAAACvAP7/AAAFAAIAAACvAP//AAAFAAMAAACwAPz/AAAAAAAAAACwAP3/AAAAAAEAAACwAP7/AAAAAAIAAACwAP//AAAAAAMAAACxAPz/AAABAAAAAACxAP3/AAABAAEAAACxAP7/AAABAAIAAACxAP//AAABAAMAAACyAPz/AAACAAAAAACyAP3/AAACAAEAAACyAP7/AAACAAIAAACyAP//AAACAAMAAACzAPz/AAADAAAAAACzAP3/AAADAAEAAACzAP7/AAADAAIAAACzAP//AAADAAMAAAC0APz/AAAEAAAAAAC0AP3/AAAEAAEAAAC0AP7/AAAEAAIAAAC0AP//AAAEAAMAAAC1APz/AAAFAAAAAAC1AP3/AAAFAAEAAAC1AP7/AAAFAAIAAAC1AP//AAAFAAMAAAC2APz/AAAAAAAAAAC2AP3/AAAAAAEAAAC2AP7/AAAAAAIAAAC2AP//AAAAAAMAAAC3APz/AAABAAAAAAC3AP3/AAABAAEAAAC3AP7/AAABAAIAAAC3AP//AAABAAMAAAC4APz/AAACAAAAAAC4AP3/AAACAAEAAAC4AP7/AAACAAIAAAC4AP//AAACAAMAAAC5APz/AAADAAAAAAC5AP3/AAADAAEAAAC5AP7/AAADAAIAAAC5AP//AAADAAMAAAC6APz/AAAEAAAAAAC6AP3/AAAEAAEAAAC6AP7/AAAEAAIAAAC6AP//AAAEAAMAAAC7APz/AAAFAAAAAAC7AP3/AAAFAAEAAAC7AP7/AAAFAAIAAAC7AP//AAAFAAMAAAC8APz/AAAAAAAAAAC8AP3/AAAAAAEAAAC8AP7/AAAAAAIAAAC8AP//AAAAAAMAAAC9APz/AAABAAAAAAC9AP3/AAABAAEAAAC9AP7/AAABAAIAAAC9AP//AAABAAMAAAC+APz/AAACAAAAAAC+AP3/AAACAAEAAAC+AP7/AAACAAIAAAC+AP//AAACAAMAAAC/APz/AAADAAAAAAC/AP3/AAADAAEAAAC/AP7/AAADAAIAAAC/AP//AAADAAMAAADAAPz/AAAEAAAAAADAAP3/AAAEAAEAAADAAP7/AAAEAAIAAADAAP//AAAEAAMAAADBAPz/AAAFAAAAAADBAP3/AAAFAAEAAADBAP7/AAAFAAIAAADBAP//AAAFAAMAAADCAPz/AAAAAAAAAADCAP3/AAAAAAEAAADCAP7/AAAAAAIAAADCAP//AAAAAAMAAADDAPz/AAABAAAAAADDAP3/AAABAAEAAADDAP7/AAABAAIAAADDAP//AAABAAMAAADEAPz/AAACAAAAAADEAP3/AAACAAEAAADEAP7/AAACAAIAAADEAP//AAACAAMAAADFAPz/AAADAAAAAADFAP3/AAADAAEAAADFAP7/AAADAAIAAADFAP//AAADAAMAAADGAPz/AAAEAAAAAADGAP3/AAAEAAEAAADGAP7/AAAEAAIAAADGAP//AAAEAAMAAADHAPz/AAAFAAAAAADHAP3/AAAFAAEAAADHAP7/AAAFAAIAAADHAP//AAAFAAMAAADIAPz/AAAAAAAAAADIAP3/AAAAAAEAAADIAP7/AAAAAAIAAADIAP//AAAAAAMAAADJAPz/AAABAAAAAADJAP3/AAABAAEAAADJAP7/AAABAAIAAADJAP//AAABAAMAAADKAPz/AAACAAAAAADKAP3/AAACAAEAAADKAP7/AAACAAIAAADKAP//AAACAAMAAADLAPz/AAADAAAAAADLAP3/AAADAAEAAADLAP7/AAADAAIAAADLAP//AAADAAMAAADMAPz/AAAEAAAAAADMAP3/AAAEAAEAAADMAP7/AAAEAAIAAADMAP//AAAEAAMAAADNAPz/AAAFAAAAAADNAP3/AAAFAAEAAADNAP7/AAAFAAIAAADNAP//AAAFAAMAAADOAPz/AAAAAAAAAADOAP3/AAAAAAEAAADOAP7/AAAAAAIAAADOAP//AAAAAAMAAADPAPz/AAABAAAAAADPAP3/AAABAAEAAADPAP7/AAABAAIAAADPAP//AAABAAMAAADQAPz/AAACAAAAAADQAP3/AAACAAEAAADQAP7/AAACAAIAAADQAP//AAACAAMAAADRAPz/AAADAAAAAADRAP3/AAADAAEAAADRAP7/AAADAAIAAADRAP//AAADAAMAAADSAPz/AAAEAAAAAADSAP3/AAAEAAEAAADSAP7/AAAEAAIAAADSAP//AAAEAAMAAADTAPz/AAAFAAAAAADTAP3/AAAFAAEAAADTAP7/AAAFAAIAAADTAP//AAAFAAMAAABSAP7/AAACAAIAAABTAP7/AAADAAIAAABUAP7/AAAEAAIAAABVAP7/AAAFAAIAAABXAP7/AAABAAIAAABYAP7/AAACAAIAAABZAP7/AAADAAIAAABaAP7/AAAEAAIAAABbAP7/AAAFAAIAAABdAP7/AAABAAIAAABeAP7/AAACAAIAAABfAP7/AAADAAIAAABgAP7/AAAEAAIAAABhAP7/AAAFAAIAAABjAP7/AAABAAIAAABkAP7/AAACAAIAAABlAP7/AAADAAIAAABmAP7/AAAEAAIAAABnAP7/AAAFAAIAAABpAP7/AAABAAIAAABqAP7/AAACAAIAAABrAP7/AAADAAIAAABsAP7/AAAEAAIAAABtAP7/AAAFAAIAAABvAP7/AAABAAIAAABwAP7/AAACAAIAAABxAP7/AAADAAIAAAByAP7/AAAEAAIAAABzAP7/AAAFAAIAAAB1AP7/AAABAAMAAAB2AP7/AAACAAMAAAB3AP7/AAADAAMAAAB4AP7/AAAEAAMAAAB5AP7/AAAFAAMAAAB7AP7/AAABAAIAAAB8AP7/AAACAAIAAAB9AP7/AAADAAIAAAB+AP7/AAAEAAIAAABcAP7/AAAAAAMAAABWAP7/AAAAAAMAAABiAP7/AAAAAAMAAABoAP7/AAAAAAMAAABuAP7/AAAAAAMAAAB0AP7/AAAAAAMAAAB6AP7/AAAAAAMAAAA=")
tile_set = SubResource("TileSet_o54qi")

[node name="Raylie" parent="." instance=ExtResource("2_yegt6")]
position = Vector2(-846, 378)
collision_layer = 1
collision_mask = 1

[node name="Camera2D" type="Camera2D" parent="Raylie"]
limit_left = -960
limit_bottom = 540
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="CoinLabel" parent="Raylie/Camera2D" instance=ExtResource("8_o0dbo")]
z_index = 2
position = Vector2(-6, -1772)
scale = Vector2(3, 3)

[node name="background" parent="Raylie/Camera2D" instance=ExtResource("1_4v7e2")]
z_index = -2
position = Vector2(764, -306)
scale = Vector2(3, 3)

[node name="RayToBruno" type="RayCast2D" parent="Raylie"]
target_position = Vector2(1448, -10)
collision_mask = 2

[node name="Ch1Main" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("6_epija")

[node name="Ch1PetWithoutPermission" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("8_bvo6i")

[node name="Ch1PetWithPrmission" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("9_6xhco")

[node name="Ch1Step2" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("10_ayp6q")

[node name="Ch1TouchHead" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("11_drh10")

[node name="Ch1SmellFist" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("12_4o3hr")

[node name="Ch1Step3" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("13_04hwu")

[node name="Ch1PetOverHead" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("14_mi7if")

[node name="Ch1PetUnderChin" parent="Raylie" instance=ExtResource("5_jp7k2")]
dialogue_resource = ExtResource("15_pvmci")

[node name="Bruno" parent="." instance=ExtResource("4_jacc6")]
position = Vector2(1251, 399)

[node name="raylie_thanks" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_xbt8h")

[node name="james_reply" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_h5jwp")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = -868.0
offset_top = 17.0
offset_right = -828.0
offset_bottom = 57.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Use keyboard arrow key to move left and right"
horizontal_alignment = 1
vertical_alignment = 1

[node name="James" parent="." instance=ExtResource("19_71q73")]
position = Vector2(1402, 400)
scale = Vector2(0.5, 0.5)
